--- a/VectorMath/VectorMath.csproj
+++ b/VectorMath/VectorMath.csproj
@@ -17,7 +17,7 @@
   <ItemGroup>
     <None Remove="LICENSE" />
     <None Remove="LICENSE.txt" />
-    <None Include="LICENSE.txt">
+    <None Include="..\LICENSE.txt">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
